<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/feliz" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/fuenteprin"
            android:text="@string/clinica"
            android:textColor="@color/blapin"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/etusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/liblue"
        android:fontFamily="@font/coming"
        android:hint="@string/usuario"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etcontraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/liblue"
        android:fontFamily="@font/coming"
        android:hint="@string/contrase_a"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/pin"
        android:fontFamily="@font/fuenteprin"
        android:text="@string/iniciar_sesion"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvregis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/coming"
        android:text="@string/reg"
        android:textStyle="bold"
        android:textSize="20sp" />
</LinearLayout>